# resource_constrained_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  decisions.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_result.md  test_results.md
data/: personal_profile.json
docs/: decisions.md  submission_checklist.md  test_results.md
src/resource_agent/: config.py  main.py  profile_conversion.py
src/resource_agent/agent/: react_agent.py  state.py
src/resource_agent/budget/: budget_manager.py
src/resource_agent/evaluation/: tasks.py
src/resource_agent/llm/: __init__.py  factory.py  mock_client.py  openai_client.py  schemas.py
src/resource_agent/tools/: base.py  calculator.py  code_execution.py  personal_profile.py  registry.py  web_search.py
src/resource_constrained_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_calculator.py  test_personal_profile.py  test_react_agent.py  test_tool_registry.py
