[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-constrained-agent"
version = "0.1.0"
description = "Resource-constrained ReAct agent assignment"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "tavily-python",
]

[project.optional-dependencies]
demo = [
  "streamlit>=1.45,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
resource-agent = "resource_agent.main:main"
